--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <li>Menu
                         <ul>
                             <li><a href="#hero">Home</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Portfolio</a></li>
-                            <li><a href="">About</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#portfolio">Portfolio</a></li>
+                            <li><a href="#about">About</a></li>
                         </ul>
                     </li>
                     <li>Get in Touch
@@ -81,6 +81,50 @@
             <i class="fa-solid fa-earth-africa"></i>
             <h3>Your Product is Worldwide</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+        </div>
+    </section>
+
+    <section class="services" id="services">
+        <div class="special">
+            <h2>services</h2>
+            <p>Don't be busy, be productive</p>
+        </div>
+        <div class="container">
+            <div class="col">
+                <div class="srv">
+                    <div>
+                        <i class="fa-solid fa-print"></i>
+                        <h3>graphic design</h3>
+                    </div>
+                    <p>Graphic design is the process of visual communication and problem-solving using one or more of typography, photography and illustration.</p>
+                </div>
+                <div class="srv">
+                    <div>
+                        <i class="fa-solid fa-file"></i>
+                        <h3>ui & ux</h3>
+                    </div>
+                    <p>Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction</p>
+                </div>
+            </div>
+            <div class="col">
+                <div class="srv">
+                    <div>
+                        <i class="fa-regular fa-window-maximize"></i>
+                        <h3>web design</h3>
+                    </div>
+                    <p>Web design encompasses many different skills and disciplines in the production and maintenance of websites.</p>
+                </div>
+                <div class="srv">
+                    <div>
+                        <i class="fa-solid fa-desktop"></i>
+                        <h3>web development</h3>
+                    </div>
+                    <p>Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.</p>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="assets/images/mountains.jpg" alt="mountain">
+            </div>
         </div>
     </section>
     
