add portfolio section and responsive

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
     </section>
 
+    <!-- work section -->
     <section class="work">
         <div class="box">
             <i class="fa-solid fa-laptop"></i>
@@ -84,6 +85,7 @@
         </div>
     </section>
 
+    <!-- services section -->
     <section class="services" id="services">
         <div class="special">
             <h2>services</h2>
@@ -127,7 +129,37 @@
             </div>
         </div>
     </section>
-    
+
+    <!-- portfolio section -->
+    <section class="portfolio" id="portfolio">
+        <div class="special">
+            <h2>portfolio</h2>
+            <p>If you do it right, it will last forever</p>
+        </div>
+        <div class="container">
+            <div class="box">
+                <img src="assets/images/portfolio1.jpeg" alt="portfolio-1">
+                <div class="text">
+                    <h3>Project Here</h3>
+                    <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="assets/images/portfolio2.jpeg" alt="portfolio-3">
+                <div class="text">
+                    <h3>Project Here</h3>
+                    <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="assets/images/portfolio3.jpeg" alt="portfolio-3">
+                <div class="text">
+                    <h3>Project Here</h3>
+                    <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- javascript -->
     <script src="JS/script.js"></script>
 </body>
