finish about section & edit selection and hover effects

--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@
         </div>
     </section>
 
+    <!-- about section -->
+     <section class="about" id="about">
+        <div class="special">
+            <h2>about</h2>
+            <p>Less is more work</p>
+        </div>
+        <div class="container">
+            <div class="image-container">
+                <img src="assets/images/about.png" alt="">
+            </div>
+            <div class="text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqui</p>
+                <hr>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqui</p>
+            </div>
+        </div>
+     </section>
+
     <!-- javascript -->
     <script src="JS/script.js"></script>
 </body>
