--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- navigation bar -->
     <nav>
         <div class="container">
-            <img class="logo" src="assets/images/logo.png">
+            <img class="logo" src="assets/icons/logo.png">
             <div class="links" id="menu">
                 <div class="menu" id="btn">
                     <span></span>
@@ -43,13 +43,13 @@
                     </li>
                     <li>Get in Touch
                         <ul>
-                            <li><a href="">contact me</a></li>
+                            <li><a href="mailto:leonagency@mail.com">contact me</a></li>
                         </ul>
                     </li>
                     <li>Get Social
                         <ul>
-                            <li><a href="">Behance</a></li>
-                            <li><a href="">Dribble</a></li>
+                            <li><a href="">Facebook</a></li>
+                            <li><a href="">Instagram</a></li>
                             <li><a href="">Twitter</a></li>
                         </ul>
                     </li>
@@ -177,6 +177,29 @@
             </div>
         </div>
      </section>
+
+    <!-- contact section -->
+    <section class="contact" id="contact">
+        <div class="special">
+            <h2>contact</h2>
+            <p>We are born to create</p>
+        </div>
+        <div class="container">
+            <h3>Feel free to drop us a line at:</h3>
+            <a href="mailto:leonagency@mail.com">leonagency@mail.com</a>
+            <div class="social">
+                <p>Find us on social networks:</p>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <p> &copy; 2019 - <span>Leon</span>, All Right Reserved</p>
+    </footer>
 
     <!-- javascript -->
     <script src="JS/script.js"></script>
